2005-04-21  Per Bothner  <per@bothner.com>

	* MyModule.java: Remove redundant import.

2005-04-20  Per Bothner  <per@bothner.com>

	Add various tests for re-export of imported declarations.
	* module0.scm: New file.
	* Makefile.am: Update accordingly.
	* module1.scm: Add explicit module-export so we can re-export some
	imported definitions.
	* module3.scm: Likewise.
	* module1.scm: Import module0 and add some new accessors.
	* module3.scm: Likewise.
	* obj-test.scm: Add 3 more tests.

2005-03-25  Per Bothner  <per@bothner.com>
	    Dean Ferreyra <dferreyra@igc.org>

	* module1.scm, module3.scm, obj-test.scm: Add multi-module test
	based on Dean's test macros2.diff in Savannah bug #11822.

2005-03-04  Per Bothner  <per@bothner.com>

	* MyModule.java: Update Interpreter->Lanuguage various places.

2005-02-20  Per Bothner  <per@bothner.com>

	* misc-test.scm: Various tests for parameters and fluids. 

2005-02-11  Dean Ferreyra  <dferreyra@igc.org>

	* misc-test.scm: New testcase for Savannah bug #11801.

2005-02-10  Per Bothner  <per@bothner.com>

	* r5rs_pitfall.scm: New testsuite, slightly modified fro Kawa.
	See http://sisc.sourceforge.net/r5rs_pitfall.php .
	* Makefile.am (check-pitfalls): Run r5rs_pitfall.scm.

2005-01-25  Per Bothner  <per@bothner.com>

	* HelloCgiX.xql: Add qexo prefix to request-query-string, to test
	that it works both with and without the prefix.

2005-01-19  Dominique Boucher <dominique.boucher@nuecho.com>

	* formatst.scm:  Add some more regression tests.

2005-01-16  Per Bothner  <per@bothner.com>

	* module3.scm: Added test for Savannah bug #11578, submitted
	by Dean Ferreyra from Merced Systems.
	* obj-test.scm: Invoke said test.

2005-01-09  Per Bothner  <per@bothner.com>

	* HelloCgiX.xql: Update to current XQuery syntax.

2005-01-08  Per Bothner  <per@bothner.com>

	* module1.scm: New test for Savannh bug #11508,
	from Thomas Kirk <tk@research.att.com>.
	* module2.scm (my-array-7): New variableusing above macro.